# 16bitNeumann

./: CMakeLists.txt  main.c  readme.txt
components/adders/: add16.c  fulladder.c  halfadder.c
components/gates/: and.c  and16.c  nand.c  not.c  not16.c  or.c  or16.c  or8way.c  xor.c
components/plexers/: dmux.c  dmux4way.c  dmux8way.c  mux.c  mux16.c  mux4way16.c
gates/: and.c  not.c  or.c  xor.c
include/: not.h  or.h
include/adders/: add16.h  fulladder.h  halfadder.h
include/gates/: and.h  and16.h  mux.h  nand.h  not16.h  or16.h  or8way.h  xor.h
include/plexers/: dmux.h  dmux4way.h  dmux8way.h  mux16.h  mux4way16.h
test/: test_add16.c  test_and.c  test_and16.c  test_dmux.c  test_dmux4way.c  test_dmux8way.c  test_fulladder.c  test_halfadder.c  test_mux.c  test_mux16.c  test_mux4way16.c  test_not.c  test_not16.c  test_or.c  test_or16.c  test_or8way.c  test_xor.c
